--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ wheel==0.43.0
 psycopg2-binary==2.9.9
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+gunicorn==22.0.0
+whitenoise==6.6.0
