ops; Update web service image to luissucuc1/traffic_challenge:latest

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - n5now-network
 
   web:
-    build: .
+    image: luissucuc1/traffic_challenge:latest
     container_name: n5now-api
     restart: always
     ports:
